<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer9">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".mobileConnection">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"

            >

            <ImageView
                android:layout_width="200dp"
                android:layout_height="35dp"
                android:layout_marginStart="237dp"
                android:layout_marginLeft="160dp"
                android:contentDescription="@string/app_name"
                android:foregroundGravity="right"
                android:src="@drawable/combanklogo" />

            <!--        <ImageView-->
            <!--            android:layout_width="0dp"-->
            <!--            android:layout_height="50dp"-->
            <!--            android:layout_margin="2dp"-->
            <!--            android:layout_marginStart="0dp"-->
            <!--            android:layout_marginLeft="0dp"-->
            <!--            android:background="@color/colorBlack"-->
            <!--            android:contentDescription="@string/app_name"-->
            <!--            android:src="@drawable/menu" />-->


        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorAccent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:background="@drawable/connections"
                    android:gravity="top"
                    android:text="@string/MobileConnections"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="130dp"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:id="@+id/dialog"
                        android:background="@drawable/imageround"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="20dp"
                            android:src="@drawable/dialog"

                            android:contentDescription="@string/app_name" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="10dp"
                            android:padding="8dp"
                            android:textStyle="bold"
                            android:text="@string/DIALOG"
                            android:textAlignment="center"
                            android:textColor="@color/colorBlack"
                            android:textSize="13sp"
                            />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="130dp"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/imageround"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="20dp"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/mobitel"
                            />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="10dp"

                            android:padding="8dp"

                            android:text="@string/MOBITEL"
                            android:textAlignment="center"
                            android:textColor="@color/colorBlack"
                            android:textSize="13sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="130dp"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/imageround"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="20dp"
                            android:src="@drawable/etisalate"

                            android:contentDescription="@string/app_name" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="10dp"

                            android:padding="8dp"

                            android:text="@string/ETISALAT"
                            android:textAlignment="center"
                            android:textColor="@color/colorBlack"
                            android:textSize="13sp"
                            android:textStyle="bold" />

                    </LinearLayout>


                </LinearLayout>

                <!--second row-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="130dp"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/imageround"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="20dp"
                            android:src="@drawable/slt"

                            android:contentDescription="@string/app_name"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="10dp"

                            android:padding="8dp"

                            android:text="@string/SLT"
                            android:textAlignment="center"
                            android:textColor="@color/colorBlack"
                            android:textSize="13sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="130dp"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/imageround"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="20dp"
                            android:src="@drawable/lankabell"

                            android:contentDescription="@string/app_name"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="10dp"

                            android:padding="8dp"

                            android:text="@string/LANKABELL"
                            android:textAlignment="center"
                            android:textColor="@color/colorBlack"
                            android:textSize="13sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="130dp"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/imageround"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="20dp"
                            android:src="@drawable/airtel"

                            android:contentDescription="@string/app_name"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="10dp"
                            android:padding="8dp"
                            android:text="@string/airtel"
                            android:textAlignment="center"
                            android:textColor="@color/colorBlack"
                            android:textSize="13sp"
                            android:textStyle="bold" />

                    </LinearLayout>


                </LinearLayout>
                <!--end row-->

                <Button
                    android:id="@+id/btnBack"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="50dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginRight="50dp"
                    android:layout_marginBottom="40dp"
                    android:background="@drawable/rounded"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/goback"
                    android:textAlignment="center"
                    android:textColor="@color/colorBlack"
                    android:textSize="20sp"


                    android:textStyle="bold" />
            </LinearLayout>


        </ScrollView>



    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:layout_marginTop="58dp"
        app:menu="@menu/nav_menu">
        <!--app:headerLayout="@layout/nav_header"-->

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>