<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer11"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBlue3"
        android:orientation="vertical"
        tools:context=".History">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"

            >

            <ImageView
                android:layout_width="200dp"
                android:layout_height="35dp"
                android:layout_marginStart="237dp"
                android:layout_marginLeft="160dp"
                android:contentDescription="@string/app_name"
                android:foregroundGravity="right"
                android:src="@drawable/combanklogo" />

            <!--        <ImageView-->
            <!--            android:layout_width="0dp"-->
            <!--            android:layout_height="50dp"-->
            <!--            android:layout_margin="2dp"-->
            <!--            android:layout_marginStart="0dp"-->
            <!--            android:layout_marginLeft="0dp"-->
            <!--            android:background="@color/colorBlack"-->
            <!--            android:contentDescription="@string/app_name"-->
            <!--            android:src="@drawable/menu" />-->


        </androidx.appcompat.widget.Toolbar>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBlue3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/colorBlue3"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:background="@drawable/title"
                    android:gravity="top"
                    android:text="PAYMENT HISTORY"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <LinearLayout
                        android:id="@+id/telephone"
                        android:layout_width="0dp"
                        android:layout_height="130dp"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/imageround"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="20dp"
                            android:contentDescription="@string/app_name"

                            android:src="@drawable/telephone" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="10dp"
                            android:padding="8dp"
                            android:text="@string/telpal"
                            android:textAlignment="center"
                            android:textColor="@color/colorBlack"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/electo"
                        android:layout_width="0dp"
                        android:layout_height="130dp"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/imageround"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="20dp"
                            android:contentDescription="@string/app_name"
                            android:src="@drawable/electro" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="10dp"

                            android:padding="8dp"

                            android:text="@string/electracity"
                            android:textAlignment="center"
                            android:textColor="@color/colorBlack"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/water"
                        android:layout_width="0dp"
                        android:layout_height="130dp"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/imageround"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="20dp"
                            android:contentDescription="@string/app_name"

                            android:src="@drawable/water" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="10dp"

                            android:padding="8dp"

                            android:text="@string/water"
                            android:textAlignment="center"
                            android:textColor="@color/colorBlack"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                    </LinearLayout>


                </LinearLayout>

                <!--second row-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <LinearLayout
                        android:id="@+id/school"
                        android:layout_width="0dp"
                        android:layout_height="130dp"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/imageround"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="20dp"
                            android:contentDescription="@string/app_name"

                            android:src="@drawable/school" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="10dp"

                            android:padding="8dp"

                            android:text="@string/school"
                            android:textAlignment="center"
                            android:textColor="@color/colorBlack"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/insurance"
                        android:layout_width="0dp"
                        android:layout_height="130dp"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/imageround"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="20dp"
                            android:contentDescription="@string/app_name"

                            android:src="@drawable/insu" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="10dp"

                            android:padding="8dp"

                            android:text="@string/insurance"
                            android:textAlignment="center"
                            android:textColor="@color/colorBlack"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/paytv"
                        android:layout_width="0dp"
                        android:layout_height="130dp"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/imageround"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_gravity="center"
                            android:layout_marginTop="20dp"
                            android:contentDescription="@string/app_name"

                            android:src="@drawable/tv" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="10dp"
                            android:padding="8dp"
                            android:text="@string/paytv"
                            android:textAlignment="center"
                            android:textColor="@color/colorBlack"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:layout_marginTop="58dp"
        app:menu="@menu/nav_menu">
        <!--app:headerLayout="@layout/nav_header"-->

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>